--- a/app/style/app.css
+++ b/app/style/app.css
@@ -1,3 +1,8 @@
 body.loading {
-  background: url(/img/gears.svg) 50% 50%;
+	background: url(/img/gears.svg) 50% 50%;
+}
+
+button {
+	width: 100%;
+	height: 4rem;
 }
