use relative paths for images

--- a/app/style/app.css
+++ b/app/style/app.css
@@ -5,7 +5,7 @@ body {
 }
 
 body.loading {
-	background: url(/img/gears.svg) 50% 50%;
+	background: url(../img/gears.svg) 50% 50%;
 }
 
 #app-list {
