--- a/app/style/app.css
+++ b/app/style/app.css
@@ -1,11 +1,11 @@
 body {
-	margin: 0;
-	font-size: 10px;
-	font-family: "FiraSans";
+  margin: 0;
+  font-size: 10px;
+  font-family: "FiraSans";
 }
 
 body.loading {
-	background: url(../img/gears.svg) 50% 50%;
+  background: url(../img/gears.svg) 50% 50%;
 }
 
 gaia-header #upload-link {
@@ -13,39 +13,40 @@ gaia-header #upload-link {
   filter: invert(100%);
 }
 
-#app-list {
-	font-size: 25px;
+#app-list > .app-item {
+  height: 66px;
 }
 
-#app-list > .app-item {
-	height: 3.4rem !important;
-	line-height: 3.4rem !important;
-	padding: .3rem !important;
-}
 #app-list > .app-item::before {
-	display: none !important;
+  display: none !important;
 }
 
 #app-list > .app-item:nth-child(odd) {
-	background-color: #eaeaea !important;
+  background-color: #eaeaea !important;
 }
 
 #app-list .app-icon {
-	max-height: 100%;
-	float: left;
-	margin-right: 13px;
+  max-height: 100%;
+  float: left;
+  margin-right: 13px;
 }
 
 #app-list .app-description {
-	color: black !important;
-	font-size: 25px !important;
+  color: black !important;
 }
 
-#app-list .app-install {
-	float: right;
-	margin: 0 !important;
+.app-name {
+  font-size: 19px !important;
+  margin: 0;
 }
 
-#app-list .action-icon{
-	width: unset !important;
+.app-author {
+  font-size: 15px !important;
+  margin: 0 0 0 2px;
+  color: #545454 !important;
+}
+
+#app-list .app-details {
+  float: right;
+  color: #626262;
 }
