Bug 1141925 - Add affected apps section to details view, disabled Open button for addons

--- a/app/style/app.css
+++ b/app/style/app.css
@@ -99,7 +99,8 @@ gaia-header #upload-link {
   position: relative !important;
 }
 
-#app-details #full-description {
+#app-details #full-description,
+#app-details #affected-apps {
   font-size: 14px;
   padding: 2px 22px;
 }
