--- a/app/style/app.css
+++ b/app/style/app.css
@@ -66,7 +66,7 @@ gaia-header #upload-link {
   margin: 0 !important;
 }
 
-.install-list .install-button.open {
+.install-list .install-button.installed {
   --button-background: var(--color-theta);
   --button-color: black;
 }
