Bug 1133979 - Update details view based on AmyLee feedback

--- a/app/style/app.css
+++ b/app/style/app.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-size: 20px;
+  font-size: 17px;
   font-family: "FiraSans";
   overflow-x: hidden;
   background-color: var(--background);
@@ -89,12 +89,14 @@ gaia-header #upload-link {
 
 #app-details {
   position: fixed;
-  z-index: 2;
-  background-color: white;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: 2;
+  background-color: var(--background);
+  color: var(--text-color);
+  --header-icon-color: var(--text-color);
   transition: transform 0.2s ease;
   transform: translateY(100%);
 }
@@ -110,5 +112,5 @@ gaia-header #upload-link {
 #app-details #full-description,
 #app-details #affected-apps {
   font-size: 14px;
-  padding: 2px 22px;
+  padding: 2px 16px;
 }
